src/main/java/lexical/test/failing/14.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 10 | Se esperaba simbolo doble: | |
&&&&&&|||